src/runtime/tests/golden/errors/04_type_mismatch/source.z42
namespace Demo;

void Main() {
    int x = 1;
    if (x) {
        Console.WriteLine("bad");
    }
}
